# gemini-browser

./: Cargo.toml  Dockerfile
src/: main.rs
src/static/: index.html
src/static/assets/: index.css
